[gd_scene load_steps=4 format=3 uid="uid://b3xko5lqek6lu"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://cfehfqm5sa27p" path="res://Sprites/Btn.png" id="2_fghij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(192, 64)

[node name="Menu" type="Node2D"]
script = ExtResource("1_abcde")

[node name="Btn1" type="Area2D" parent="."]
position = Vector2(576, 200)

[node name="Sprite2D" type="Sprite2D" parent="Btn1"]
texture = ExtResource("2_fghij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Btn1"]
shape = SubResource("RectangleShape2D_1")

[node name="Btn2" type="Area2D" parent="."]
position = Vector2(576, 300)

[node name="Sprite2D" type="Sprite2D" parent="Btn2"]
texture = ExtResource("2_fghij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Btn2"]
shape = SubResource("RectangleShape2D_1")

[node name="Btn3" type="Area2D" parent="."]
position = Vector2(576, 400)

[node name="Sprite2D" type="Sprite2D" parent="Btn3"]
texture = ExtResource("2_fghij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Btn3"]
shape = SubResource("RectangleShape2D_1")

[connection signal="input_event" from="Btn1" to="." method="_on_Btn1_input_event"]
[connection signal="input_event" from="Btn2" to="." method="_on_Btn2_input_event"]
[connection signal="input_event" from="Btn3" to="." method="_on_Btn3_input_event"]
